--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
-header *{
+.header {
     text-align: right;
+    margin: 23px;
+}
+
+.nav-links {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-size: 13px;
@@ -7,8 +11,51 @@ header *{
     text-decoration: none;
 }
 
+.nav-links:hover {text-decoration: underline;}
 
-section * {
-    text-align: center;
+body {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #222;
 }
+
+.image {text-align: center;}
+
+.search-bar {
+    text-align: center;   
+    position: relative;
+    margin: 0 auto; 
+    max-width: 584px;
+    padding: 20px;
+}
+
+.text-bar {
+    display: flex;
+    border: 1px solid #dfe1e5;
+    padding-inline: 14px;
+    background: #fff;
+    border-radius: 24px;
+    height: 44px;
+}
+
+.search {
+    border: none;
+    background: transparent;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    height: 44px;
+    width: 100%; 
+    font-size: 16px;
+}
+
+svg {
+    color: #9aa0a6;
+    height: 44px;
+    padding-right: 13px;
+}
+
+.search:focus {outline: none;}
+
+
+
 
