--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .header {
     text-align: right;
-    margin: 23px;
+    margin: 21px;
 }
 
 .nav-links {
@@ -28,7 +28,6 @@ body {
     max-width: 584px;
     padding: 20px;
 }
-
 .text-bar {
     display: flex;
     border: 1px solid #dfe1e5;
@@ -36,26 +35,52 @@ body {
     background: #fff;
     border-radius: 24px;
     height: 44px;
+    margin-bottom: 18px;
+    margin-top: 3px;
 }
+.text-bar:hover {box-shadow: 0 1px 6px rgb(32 33 36 / 28%);}
 
 .search {
     border: none;
     background: transparent;
     padding-right: 15px;
-    padding-bottom: 15px;
-    height: 44px;
     width: 100%; 
     font-size: 16px;
 }
 
 svg {
     color: #9aa0a6;
-    height: 44px;
+    fill: currentColor;
+    height: 24px;
+    margin-block: 10px;
     padding-right: 13px;
 }
 
 .search:focus {outline: none;}
 
+.button {
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    color: #3c4043;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+}
+
+.button:hover{
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+}
 
 
 
