--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,22 @@ body {
     color: #222;
 }
 
-.image {text-align: center;}
+.image {
+    margin: 0 auto;
+    background-size: 272px 92px;
+    height: 92px;
+    width: 272px;
+    background-image: url(GoogleLogo.png);
+    background-repeat: no-repeat;
+}
+
+#subtext {
+    color: #4285f4;
+    font: 16px roboto-regular, arial, sans-serif;
+    position: relative;
+    left: 215px;
+    top: 76px;
+}
 
 .search-bar {
     text-align: center;   
