--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+body{ margin: 0px;}
 .header {
     text-align: right;
     margin: 21px;
@@ -5,8 +6,10 @@
 
 .header-adv {
     display: flex;
-    padding-top: 8px;
-    padding-bottom: 20px;
+    align-items: center;
+    padding-top: 16px;
+    padding-inline: 8px;
+    padding-bottom: 16px;
 }
 
 .links-adv {
@@ -24,11 +27,18 @@
 
 .nav-links:hover {text-decoration: underline;}
 
-#SmallLogo{ 
-    text-align: left;
+#SmallLogo{
     padding-left: 12px;
+    margin-top: 4px;
 }
 
+.label{
+    text-align: left;
+    color: #d93025;
+    font-size: 20px;
+    padding: 25px 35px;
+    border-bottom: 1px solid #ebebeb;
+}
 
 body {
     font-size: 16px;
@@ -114,5 +124,8 @@ svg {
     color: #202124;
 }
 
+.forms-div{
+    margin: 40px 45px;
+}
 
 
