--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,11 @@ svg {
 
 .search:focus {outline: none;}
 
+.adv-22:focus {
+    border: 1px solid #4d90fe;
+    outline: none;
+}
+
 .button {
     background-color: #f8f9fa;
     border: 1px solid #f8f9fa;
@@ -130,12 +135,12 @@ svg {
     width: 96%;
     margin: 40px 2% 0 45px;}
 
-.first-div *{
+.first-div *, .secnd-div *{
     display: inline-block;
     color: #333;
 }
 
-.div-adv-11{
+.div-adv-11, .div-adv-21{
     vertical-align: middle;
     width: 16%;
     min-height: 42px;
@@ -147,26 +152,86 @@ svg {
     font-size: 16px;
 }
 
-.div-adv-12{
+.div-adv-12, .div-adv-22{
     min-width: 167px;
     min-height: 41px;
-    width: 50%;
+    width: 49%;
     vertical-align: middle;
 }
 
 .div-adv-13{
     font-size: 13px;
     font-weight: 700;
+    min-height: 42px;
     width: 32%;
     vertical-align: middle;
 }
 
 .adv-13{
     text-align: left;
+    padding-block: 6px;
     min-height: 30px;
     color: #777;
 }
 
+.adv-21{
+    font-size: 13px;
+    color: #222;
+    padding-block: 6px;
+}
+
+.adv-22{
+    width: 98%;
+    border-radius: 1px;
+    border: 1px solid #d9d9d9;
+    border-top: 1px solid #c0c0c0;
+    font-size: 13px;
+    height: 25px;
+    padding: 1px 8px;
+}
+
+.div-adv-23{
+    width: 31%;
+    min-width: 160px;
+    margin: 0 0 8px 1%;
+    color: #555;
+    font-size: 11px;
+    padding-left: 5px;
+    vertical-align: middle;
+    position: relative;
+}
+
+.mono{
+    color: #666;
+    font-family: monospace;
+    font-size: 11px;
+    white-space: pre;
+}
+
+.div-button{float: right;}
+
+.button-adv{
+    margin: 10px 0px;
+    float: right;
+    line-height: 100%;
+    height: 30px;
+    min-width: 120px;
+    background-color: #4d90fe;
+    border-radius: 2px;
+    font-size: 11px;
+    font-weight: bold;
+    text-align: center;
+    white-space: nowrap;
+    border: 1px solid #3079ed;
+    color: #fff;
+}
+
+.button-adv:hover{
+    background-color: #357ae8;
+    background-image: -webkit-linear-gradient(top,#4d90fe,#357ae8);
+    border: 1px solid #2f5bb7;
+    border-image: initial;
+}
 
 
 
