--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 .header-adv{
     display: flex;
     align-items: center;
-    padding-left: 16px 8px 14px 8px;
+    padding: 16px 8px 14px 8px;
 }
 
 .links-adv {
