--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* body{ margin: 0px;} */
+body{ margin: 0px;}
 
 .header {
     text-align: right;
@@ -6,13 +6,12 @@
 }
 
 .header-adv{
-    display: inline;
+    display: flex;
     align-items: center;
     padding: 16px 8px 14px 8px;
 }
 
 .links-adv {
-    display: inline;
     margin-left: auto;
     text-align: right;
 }
